# BeatBoard

./: .gitmodules  AGENTS.md  CHANGELOG.md  README.md  SUPPORT.md  beatboard_dev.py  build_and_install.sh  follow.sh  init.tmux  main.py  opencode.json  opencode.jsonc  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md  hardware_support.md
.github/workflows/: ci.yml  publish.yml
src/: _version.py  args.py  color_gen.py  globs.py  hardware.py  keyboard_support.py  playerctl.py
src/beatboard/: __init__.py  __main__.py  args.py  beatboard.py  color_gen.py  globs.py  hardware.py  playerctl.py  utils.py
src/beatboard/cache/: colors.py  db.py
tests/: test_args.py  test_cache_colors.py  test_db.py  test_globs.py  test_hardware.py  test_imports.py
