[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "BeatBoard"
dynamic = ["version"]
description = "Dynamic keyboard RGB lighting based on Spotify album art"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "colorthief==0.2.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "numpy==2.3.4",
    "packaging==25.0",
    "pillow==12.0.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pyusb==1.3.1",
    "randomcolor==0.4.4.6",
    "requests==2.32.5",
    "rich==14.2.0",
    "setuptools-scm==8.1.0",
    "six==1.17.0",
    "urllib3==2.5.0",
    "pytest==8.3.3",
]

[project.urls]
Homepage = "https://github.com/abdellatif-temsamani/BeatBoard"
Repository = "https://github.com/abdellatif-temsamani/BeatBoard"
Issues = "https://github.com/abdellatif-temsamani/BeatBoard/issues"
Changelog = "https://github.com/abdellatif-temsamani/BeatBoard/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
